--- a/index.html
+++ b/index.html
@@ -25,22 +25,28 @@
         <a href="SHOP NOW" alt="">SHOP NOW</a>
         </div>
         <section>
+            <div>
             <img src="src/images/kuchka.jpg" alt="">
             <h2>$8.00(kg)</h2>
             <p>American Cockie</p>
             <a href="">BUY</a>
+            </div>
         </section>
         <section>
+            <div>
             <img src="src/images/kruvasan.jpg" alt="">
             <h2>$4.00</h2>
             <p>Crushed with chockolate</p>
             <a href="">BUY</a>
+            </div>
         </section>
         <section>
+            <div>
             <img src="src/images/pirog.jpg" alt="">
             <h2>For piece $4.00</h2>
             <p>Blackberry pie</p>
             <a href="">BUY</a>
+            </div>
         </section>
       </div>
       <div>
