--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
         <h1>TRADITIONAL ARTISAX BAKERY</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-        <a href="SHOP NOW" alt="">SHOP NOW</a>
+        <a href="">SHOP NOW</a>
         </div>
         <section>
             <div>
@@ -71,8 +71,6 @@
             <h2>Coockies&Pretzels</h2>
             <h2>Order</h2>
         </div>
-        <br>
-        <br>
         <div>
             <h1>Quality our bekary</h1>
             <div>
@@ -182,8 +180,8 @@
         <h1>TRADITIONAL ARTISAX BAKERY</h1>
         <p>We want be helthy</p>
         </div>
-        <div>
-            <div><p >About</p>
+            <div>
+                <p >About</p>
                 <div>
                   <p >About us</p>
                   <p >Features</p>
