--- a/index.html
+++ b/index.html
@@ -241,51 +241,55 @@
                 </div>
             </div>
         </section>
+        <div>
+            <section>
+                <div>
+                    <h1>Where</h1>
+                    <img src="src/images/karta.jpg" alt="">
+                </div>
+                <div>
+                    <h2>How</h2>
+                    <p>+38 055 123 13 12</p>
+                    <p>Tik tok.:@TR.Bekary</p>
+                    <p>Inst:@TR.Bekary</p>
+                </div>
+                <div>
+                    <h2>When</h2>
+                    <p>with 8:30 to 20:30</p>
+                </div>
+        </div>
+        </section>
     </main>
     <footer>
-            <h1>Where</h1>
-            <img src="src/images/karta.jpg" alt="">
+        <div>
+            <h1>TRADITIONAL ARTISAX BAKERY</h1>
+            <p>We want be helthy</p>
+        </div>
+        <div>
+            <p>About</p>
             <div>
-                <h2>How</h2>
-                <p>+38 055 123 13 12</p>
-                <p>Tik tok.:@TR.Bekary</p>
-                <p>Inst:@TR.Bekary</p>
+                <p>About us</p>
+                <p>Features</p>
+                <p>News & Blog</p>
+            </div>
+        </div>
+        <div>
+            <p>Movement</p>
+            <div>
+                <p>What Eatly</p>
+                <p>Support Us</p>
             </div>
             <div>
-                <h2>When</h2>
-                <p>with 8:30 to 20:30</p>
-            </div>
-            <br>
-            <br>
-            <div>
-                <h1>TRADITIONAL ARTISAX BAKERY</h1>
-                <p>We want be helthy</p>
-            </div>
-            <div>
-                <p>About</p>
+                <p>Company</p>
                 <div>
-                    <p>About us</p>
-                    <p>Features</p>
-                    <p>News & Blog</p>
+                    <p>Why Eatly</p>
+                    <p>Capital</p>
+                    <p>Securaty</p>
                 </div>
             </div>
+        </div>
             <div>
-                <p>Movement</p>
-                <div>
-                    <p>What Eatly</p>
-                    <p>Support Us</p>
-                </div>
-                <div>
-                    <p>Company</p>
-                    <div>
-                        <p>Why Eatly</p>
-                        <p>Capital</p>
-                        <p>Securaty</p>
-                    </div>
-                </div>
-                <div>
-                    <p>@2022 Eatly.All right riserved.</p>
-                </div>
+                <p>@2022 Eatly.All right riserved.</p>
             </div>
     </footer>
 </body>
