--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="header-menu">
             <ul>
                 <li>About us</li>
                 <li>Delivery</li>
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section>
-            <div>
+            <div class="first-text">
                 <h1>TRADITIONAL ARTISAX BAKERY</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
@@ -36,7 +36,7 @@
                     leap into electronic typesetting, remaining essentially unchanged.</p>
                 <a href="">SHOP NOW</a>
             </div>
-            <div>
+            <div class="header-buy">
                 <div>
                     <img src="src/images/kuchka.jpg" alt="">
                     <h2>$8.00(kg)</h2>
@@ -59,7 +59,7 @@
         </section>
         <section>
             <h1>Menu</h1>
-            <div>
+            <div class="header-oll">
                 <div>
                     <img src="src/images/baton.jpg" alt="">
                     <h2>Breads</h2>
@@ -84,7 +84,7 @@
         </section>
         <section>
             <h1>Quality our bekary</h1>
-            <div>
+            <div class="main-menu">
                 <div>
                     <img src="src/images/baton.jpg" alt="">
                     <ul>
@@ -116,7 +116,7 @@
         </section>
         <section>
             <h1>Why TRADITIONALARTISAX BAKERY ?</h1>
-            <div>
+            <div class="main-invis">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="219" height="183" viewBox="0 0 219 183" fill="none">
                         <path
@@ -243,17 +243,17 @@
         </section>
         <div>
             <section>
-                <div>
+                <div class="map">
                     <h1>Where</h1>
                     <img src="src/images/karta.jpg" alt="">
                 </div>
-                <div>
+                <div class="main-info">
                     <h2>How</h2>
                     <p>+38 055 123 13 12</p>
                     <p>Tik tok.:@TR.Bekary</p>
                     <p>Inst:@TR.Bekary</p>
                 </div>
-                <div>
+                <div class="main-when">
                     <h2>When</h2>
                     <p>with 8:30 to 20:30</p>
                 </div>
@@ -261,11 +261,11 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer-first">
             <h1>TRADITIONAL ARTISAX BAKERY</h1>
             <p>We want be helthy</p>
         </div>
-        <div>
+        <div class="footer-p">
             <p>About</p>
             <div>
                 <p>About us</p>
@@ -273,13 +273,13 @@
                 <p>News & Blog</p>
             </div>
         </div>
-        <div>
+        <div class="footer-second">
             <p>Movement</p>
             <div>
                 <p>What Eatly</p>
                 <p>Support Us</p>
             </div>
-            <div>
+            <div class="footer-info">
                 <p>Company</p>
                 <div>
                     <p>Why Eatly</p>
@@ -288,9 +288,9 @@
                 </div>
             </div>
         </div>
-            <div>
-                <p>@2022 Eatly.All right riserved.</p>
-            </div>
+        <div class="last">
+            <p>@2022 Eatly.All right riserved.</p>
+        </div>
     </footer>
 </body>
 
